frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usermgmt-webapp
  labels:
    apps: usermgmt-webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      apps: usermgmt-webapp
  template:
    metadata:
      labels:
          apps: usermgmt-webapp
    spec:
      containers:
        - name: usermgmt-webapp
          image: stacksimplify/kube-usermgmt-webapp:1.0.0-MySQLDB
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
