nginx-1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-nginx-deployment
  labels:
    app: app1-nginx 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1-nginx 
  template:
    metadata:
      labels:
          app: app1-nginx 
    spec:
      containers:
        - name: app1-nginx 
          image: stacksimplify/kube-nginxapp1:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      nodeSelector:
          kubernetes.io/role: agent 
          beta.kubernetes.io/os: linux
          type: virtual-kubelet
      tolerations:
        - key: virtual-kubelet.io/provider
          operator: Exists
        - key: azure.con/aci
          effect: NoSchedule
