nginx-2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2-nginx-deployment
  labels:
    app: payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
          app: payment
    spec:
      containers:
        - name: payment
          image: stacksimplify/kube-nginxapp2:1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
