fronendservice.yml
apiVersion: v1
kind: Service 
metadata:
  name: usermgmt-webapp-service 
  labels:
    app: usermgmt-webapp 
spec: 
  type: ClusterIP #it will not be accessable outside the k8s cluster. 
  selector:
    apps: usermgmt-webapp
  ports:
    - port: 80
      targetPort: 8080
