myapp3srv.yml
apiVersion: v1
kind: Service 
metadata:
  name: deployment-loadbalancer-service
spec:
  type: LoadBalancer #ClusterIp #NodePort
  selector:
    app: myapp3
  ports:
    - name: httpd
      port: 80 #service port
      targetPort: 80 #container port
