mysql-external-service.yml
apiVersion: v1
kind: Service 
metadata:
  name: mysql
spec:
  type: ExternalName
  externalName: akswebappdbgopal.mysql.database.azure.com
