nginx-1-service.yml
apiVersion: v1
kind: Service 
metadata:
  name: app1-nginx-clusterip-service
  labels:
    app: app1-nginx 
spec: 
  type: ClusterIP #it will not be accessable outside the k8s cluster. 
  selector:
    app: app1-nginx
  ports:
    - port: 80
      targetPort: 80
