nginx-2-service.yml
apiVersion: v1
kind: Service 
metadata:
  name: payment-nginx-clusterip-service
  labels:
    app: payment
spec: 
  type: ClusterIP #it will not be accessable outside the k8s cluster. 
  selector:
    app: payment
  ports:
    - port: 80
      targetPort: 80
