windowsdeployment.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
  name: usermgmt-webapp-win
  labels:
    app: usermgmt-webapp-win
spec:
  replicas: 1
  selector:
    matchLabels:
      app: usermgmt-webapp-win
  template:
    metadata:
      labels:
        app: usermgmt-webapp-win
         
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": windows
      containers:
        - name: usermgmt-webapp-win
          image: mcr.microsoft.com/dotnet/framework/samples:aspnetapp
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 1
              memory: 800M
            requests:
              cpu: 1
              memory: 300M
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: usermgmt-webapp-win-svc
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
  selector:
    app: usermgmt-webapp-win
