frontendingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: usermgmt-webapp-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - http:
      paths:
      - path: /app1/
        pathType: Prefix
        backend:
          service:
            name: app1-nginx-clusterip-service
            port:
              number: 80
      - path: /payment/ #absolute path of your application inside your container. 
        pathType: Prefix
        backend:
          service:
            name: payment-nginx-clusterip-service
            port:
              number: 80        
      - path: /
        pathType: Prefix
        backend:
          service:
            name: usermgmt-webapp-service 
            port:
              number: 80
